[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isoview"
version = "0.1.0"
description = "Python client for the ISOview energy forecasting API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://isoview.io"
Documentation = "https://isoview.io/docs"
Repository = "https://github.com/isoview-io/isoview-client"

[tool.setuptools.packages.find]
include = ["isoview*"]
